src/objects/Rehab_Project_Loan__c.object
<CustomObject>
    <description>Rehab - Project Loan</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Area_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area Program</label>
        <referenceTo>Area_Program__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Number__c</fullName>
        <label>Document Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Authority__c</fullName>
        <label>Funding Authority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CA Hsg Trust Fd</fullName>
                </value>
                <value>
                    <fullName>CalHOME</fullName>
                </value>
                <value>
                    <fullName>CalHome EAGR</fullName>
                </value>
                <value>
                    <fullName>CDBG</fullName>
                </value>
                <value>
                    <fullName>Central Imperial Red</fullName>
                </value>
                <value>
                    <fullName>CHFA</fullName>
                </value>
                <value>
                    <fullName>CHRP-O</fullName>
                </value>
                <value>
                    <fullName>City Hts Redev</fullName>
                </value>
                <value>
                    <fullName>Coastal</fullName>
                </value>
                <value>
                    <fullName>College Grove Redev</fullName>
                </value>
                <value>
                    <fullName>Construction Defects</fullName>
                </value>
                <value>
                    <fullName>Crossroads Redev</fullName>
                </value>
                <value>
                    <fullName>Discretionary Funds</fullName>
                </value>
                <value>
                    <fullName>Enterprize Community</fullName>
                </value>
                <value>
                    <fullName>Grantville Redev</fullName>
                </value>
                <value>
                    <fullName>HOME</fullName>
                </value>
                <value>
                    <fullName>HOPWA</fullName>
                </value>
                <value>
                    <fullName>Hsg Trust Fund</fullName>
                </value>
                <value>
                    <fullName>HTF/CDBG</fullName>
                </value>
                <value>
                    <fullName>HTF/Linkage</fullName>
                </value>
                <value>
                    <fullName>HUD Healthy Homes</fullName>
                </value>
                <value>
                    <fullName>HUD Lead Control Grt</fullName>
                </value>
                <value>
                    <fullName>HUD Lead Demo Grant</fullName>
                </value>
                <value>
                    <fullName>HUD Lead Pt Grant</fullName>
                </value>
                <value>
                    <fullName>Inclusionary</fullName>
                </value>
                <value>
                    <fullName>Lease Revenue</fullName>
                </value>
                <value>
                    <fullName>Linda Vista Redev</fullName>
                </value>
                <value>
                    <fullName>Market St Redev</fullName>
                </value>
                <value>
                    <fullName>Mt Hope Redev</fullName>
                </value>
                <value>
                    <fullName>No Park Redev</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LSSI__c</fullName>
        <label>LSSI</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyRHNumber__c</fullName>
        <label>LegacyRHNumber</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lender__c</fullName>
        <label>Lender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Crocker Bank</fullName>
                </value>
                <value>
                    <fullName>HUD</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>SDHC</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Wells Fargo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Type__c</fullName>
        <label>Loan Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Buy Down</fullName>
                </value>
                <value>
                    <fullName>Direct Deferred</fullName>
                </value>
                <value>
                    <fullName>Direct Forgiven</fullName>
                </value>
                <value>
                    <fullName>Direct Installment</fullName>
                </value>
                <value>
                    <fullName>Direct Interest Only</fullName>
                </value>
                <value>
                    <fullName>Grant</fullName>
                </value>
                <value>
                    <fullName>Lead Paint Grant</fullName>
                </value>
                <value>
                    <fullName>Leveraged Installment</fullName>
                </value>
                <value>
                    <fullName>LOA</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partially Deferred</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Section 312</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Participating_Units__c</fullName>
        <formula>IF( Area_Program__c = Rehab_Project__r.Master_Target_Area__c ,  Rehab_Project__r.Participating_Units__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participating Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <formula>Area_Program__r.Program__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recorded__c</fullName>
        <label>Recorded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rehab_Project__c</fullName>
        <label>Rehab Project</label>
        <referenceTo>Rehab_Project__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <formula>IF( Area_Program__c = Rehab_Project__r.Master_Target_Area__c ,  Rehab_Project__r.Total_Units__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Loan</label>
    <nameField>
        <displayFormat>Loan-{00000}</displayFormat>
        <label>LoanID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LSSI_Format_Validation</fullName>
        <active>true</active>
        <description>Makes sure the LSSI number is formatted correctly</description>
        <errorConditionFormula>AND( NOT( ISBLANK(LSSI__c) ) ,NOT( REGEX(  LSSI__c  , &quot;[0-9]{1}-[0-9]{2}-[0-9]{4}&quot;) ))</errorConditionFormula>
        <errorDisplayField>LSSI__c</errorDisplayField>
        <errorMessage>Following Format Required: #-##-####</errorMessage>
    </validationRules>
</CustomObject>